src/Post/Post.css
.post {
    box-sizing: border-box;
    background-color: white;
    height: 580px;
    width: 26vw;
    margin-bottom: 48px;
    padding: 24px 24px 32px 24px;
    box-shadow: grey 0px 0px 10px 1px ; 
    grid-column: span 4;
    position: relative;
}
.no-decoration{
    color: black;
    text-decoration: none;
}
.content {
    position: relative;
    width: 100%;
    height: 100%;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: start;
}

.content-img {
    margin-bottom: 32px;
    height: 240px;
    object-fit: cover;
}

.content-category {
    margin-bottom: 12px;
    margin-top: 0;
    font-size: clamp(12px,.97vw,20px);
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
    color: #6941C6;
}

.content-title {
    margin-bottom: 12px;
    margin-top: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: clamp(18px,1.67vw,30px);
    line-height: clamp(28px,2.3vw,40px);
}

.content-desc {
    margin-bottom: 12px;
    margin-top: 0;
    font-size: clamp(12px,1.12vw,20px);
    color: #667085;
    font-family: Arial, Helvetica, sans-serif;
    margin-bottom: 8px;
    line-height: clamp(20px,1.67vw,28px);

}
.content-avatar{
    border-radius: 50%;
}
.content-info {
    height: 40px;
    width: clamp(120px,9.6vw,160px);
    display: flex;
    flex-direction: row;
    gap: .84vw;
    position: absolute;
    bottom: 0;
}

.content-data {
    display: flex;
    flex-direction: column;
    width: clamp(70px,6vw,100px);
    height: 40px;
    justify-content: space-around;
}

.content-author {
    margin: 0;
    font-size: clamp(12px,.98vw,16px);
    color: #101828;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}

.content-date {
    margin: 0;
    font-size: clamp(12px, .98vw, 16px);
    color: #667085;
    font-family: Arial, Helvetica, sans-serif;
}

.delete-post-div{
    position: absolute;
    bottom: 0%;
    right: 0%;
   
}
.delete-post-btn{
    width: clamp(14px,2.0vw,32px);
    height: clamp(14px, 2.0vw, 32px);
    border-radius: 50%;
    border: none;
    background-color: white;
    background-image: url('../assets/delete.svg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: 16px 16px;
    cursor: pointer;
}
@media screen and (max-width: 768px) {
.post {
        grid-column: span 6;
        width: clamp(180px,40vw,320px);
    }
.no-decoration{
        grid-column: span 6;
}
}

@media screen and (max-width:481px) {
.post {
        grid-column: span 12;
        width: clamp(300px, 80vw, 420px);
    }
.no-decoration{
        grid-column: span 12;
}
}

